--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
+@@ -0,0 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>OLA MUNDO</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">" <title>OLA MUNDO</title>
 </head>
+2
 <body>
 <header>
 <h1>Hello Mundo</h1>
-<p>Que bom te ver por aqui, Fulano</p>
+<p>Que bom te ver por aquí, Fulano</p>
 </header>
 <section>
 <h2>HTML</h2>
 <P>Hypertext Markup Language (em português, Linguagem de Marcação de Hipertexto) estrutura a sua página web</P> <h2>CSS</h2>
 <P>Cascading Style Sheets (em português, Folha de Estilo em Cascata) estiliza a sua página web</P>
+<img src="imagem/olá Mundo.png"
 </section>
 <footer>
 <p>Uma página desenvolvida por Alura Start</p>
