--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <h2>HTML</h2>
 <P>Hypertext Markup Language (em português, Linguagem de Marcação de Hipertexto) estrutura a sua página web</P> <h2>CSS</h2>
 <P>Cascading Style Sheets (em português, Folha de Estilo em Cascata) estiliza a sua página web</P>
-<img src="imagem/olá Mundo.png"
+<img src="/olá Mundo.png"
 </section>
 <footer>
 <p>Uma página desenvolvida por Alura Start</p>
